--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.2
 blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
@@ -7,16 +8,22 @@ dnspython==2.6.1
 falcon==3.1.3
 Flask==3.0.3
 Flask-JWT-Extended==4.6.0
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.5
 MarkupSafe==2.1.5
 packaging==24.1
+pillow==10.4.0
 PyJWT==2.8.0
+pytz==2024.1
 requests==2.32.3
 SQLAlchemy==2.0.31
+svgwrite==1.4.3
+Tree==0.2.4
 typing_extensions==4.12.2
 urllib3==2.2.2
 Werkzeug==3.0.3
